# Magma

./: .gitignore  debug_preprocess.py  eval_mind2web.ipynb  inference.py  inference_4bit.py  pyproject.toml  run.sh  test.ipynb  test_uigraph_cpu.py  train.py
app/: Makefile  pyproject.toml  run.sh
app/agent/: executor.py
app/client/: index.html  package-lock.json  package.json  vite.config.ts
app/client/public/: config.js
app/client/src/: main.tsx  styles.css  vite-env.d.ts
app/client/src/hooks/: use-task-runner.ts
app/client/src/services/: core-api.ts  task.mutation.ts  task.ts
app/client/src/types/: api.ts  task.ts
app/server/output/04790e59-ba21-4c41-a001-53f14b6c93f6/: prompt.txt
app/server/output/24dbf0ef-6a55-445c-b98c-1158204e1d4b/: prompt.txt
app/server/output/2b280245-6101-4f2a-8d39-0b430b86dccb/: prompt.txt
app/server/output/366ea6ec-7839-4352-8ab7-ff60d6d7a7b8/: prompt.txt
app/server/output/367caf7e-3f0e-4681-be40-8b975c685e4d/: prompt.txt
app/server/output/69966dff-be2d-464f-b9c5-f047445c5602/: prompt.txt
app/server/output/847610d1-2a6e-47be-b069-1c7ccdc7ce9d/: prompt.txt
app/server/output/ad8cb8ab-32e4-47be-9c0d-005a60fa0830/: prompt.txt
app/server/output/de5421ad-7eaa-4fa3-916c-21d2a9b03043/: prompt.txt
app/tests/: conftest.py  run_integration_tests_colab.ipynb  test_main.py
app/tests/domains/: test_task_dao.py
app/tests/integration/: test_task_pipeline_integration.py
app/tests/middlewares/: test_logging_middleware.py
app/tests/routers/: test_task_controller.py
app/tests/services/: test_task_service.py
(+117 files in other folders)
